[build-system]
requires = [
  "setuptools>=77.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "Wand"
authors = [
    {name = "Hong Minhee", email = "hongminhee@member.fsf.org"},
    {name = "E. McConville", email = "emcconville@emcconville.com"},
]
maintainers = [
    {name = "E. McConville", email = "emcconville@emcconville.com"},
]
description = "Ctypes-based simple MagickWand API binding for Python"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.8"
keywords = ["ImageMagick", "ctypes"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Multimedia :: Graphics",
]
version = "0.7.0"

[project.optional-dependencies]
test = ["pytest >= 7.2.0"]
doc = ["Sphinx >= 7.2.6"]

[project.urls]
Homepage = "https://docs.wand-py.org"
Documentation = "https://docs.wand-py.org/en/latest/index.html"
Repository = "https://github.com/emcconville/wand"
Tracker = "https://github.com/emcconville/wand/issues"
Changelog = "https://docs.wand-py.org/en/latest/changes.html"

[tool.setuptools.packages.find]
include = ["wand", "wand.cdefs"]
exclude = [
    "prof",
    "reports",
    "sample",
    "support",
    "temp"
]

[tool.pytest.ini_options]
minversion = "7.2.0"
testpaths = ["tests"]
addopts = "--skip-pdf --skip-fft"