[metadata]
author = Hong Minhee
author_email = hongminhee@member.fsf.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
description = Ctypes-based simple MagickWand API binding for Python
keywords = ImageMagick, ctypes
license = MIT
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
maintainer = E. McConville
maintainer_email = "E. McConville" <emcconville@emcconville.com>
name = Wand
platforms = unix, linux, osx, win32
project_urls =
    Documentation = https://docs.wand-py.org
    Changelog=https://docs.wand-py.org/en/latest/changelog.html
    Source = https://github.com/emcconville/wand
    Tracker = https://github.com/emcconville/wand/issues
url = https://docs.wand-py.org/en/latest/
version = attr: wand.version.VERSION

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
include =
    wand
    wand.cdefs
exclude =
    docs*
    tests*
    support*

[options.extras_require]
test = ptest>=7.2.0
doc = Sphinx>=5.3.0